# surface

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  agent.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: backend.yml
alembic/: env.py
alembic/versions/: 2026_07_02_0001_initial_schema.py
app/: bootstrap.py  main.py
app/agents/: fund_analysis_graph.py
app/api/: dependencies.py  error_handlers.py  router.py
app/clients/: akshare_client.py  langchain_client.py
app/core/: auth.py  config.py  current_user.py  exception.py  lifespan.py  middleware.py  pagination.py  readiness.py  response.py  security.py
app/db/: session.py  uow.py
app/repositories/: agents.py  ai_fund_reports.py  fund_favorites.py  system_settings.py  users.py
app/services/: agent_runtime_service.py  agent_service.py  ai_fund_report_service.py  ai_fund_service.py  fund_favorite_service.py  fund_service.py  system_setting_service.py  user_service.py
app/sql/: 001_create_users.sql  002_add_users_role_id.sql  003_create_user_favorite_funds.sql  004_create_system_settings.sql  005_create_ai_fund_reports.sql  006_create_agent_platform.sql  007_create_agent_conversations.sql
app/tools/: fund_tools.py
deploy/: Dockerfile.web  README.md  deploy-web.sh  deploy.sh  docker-compose.yml  nginx.conf
docs/: agent-platform-design.md  v1.0.md  v1.1.md  v1.2.md  开发手册.md  架构与开发规范.md
docs/changes/: 2026-07-14-固定-pandas-版本避免-AkShare-崩溃.md  (+2 more)
scripts/: start.sh  test.sh
tests/: db_helpers.py  test_agent_routes.py  test_ai_fund_service.py  test_ai_routes.py  test_akshare_client.py  test_app_module_structure.py  test_core_middleware.py  test_exception_mapping.py  test_fund_favorite_routes.py  test_fund_routes.py  test_health_routes.py  test_settings_routes.py  test_strategy_routes.py  test_tool_calling_agent.py  test_uow.py  test_user_routes.py
web/: index.html  package-lock.json  package.json
(+125 files in other folders)
