[project]
name = "surface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "bcrypt<5",
    "email-validator>=2.3.0",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "openai>=2.44.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "greenlet>=3.5.3",
    "alembic>=1.18.5",
]

[dependency-groups]
dev = [
    "alembic>=1.18.5",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
include = ["app", "alembic"]
exclude = ["tmp", ".venv"]
pythonVersion = "3.12"
